--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.6.1"
+    "http": "^0.0.1-security",
+    "mongoose": "^7.6.1",
+    "nodemailer": "^6.9.6",
+    "path": "^0.12.7"
   }
 }
