--- a/WebsiteSaeReact/isidor/package.json
+++ b/WebsiteSaeReact/isidor/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.6.2",
+    "react-unity-webgl": "^9.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
