--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -16,6 +16,7 @@
     "http": "^0.0.1-security",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "paypal-rest-sdk": "^1.8.1"
   }
 }
