--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -11,14 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.0",
     "http": "^0.0.1-security",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
+    "store": "^2.0.12",
     "stripe": "^8.50.0"
   }
 }
