--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.0",
     "http": "^0.0.1-security",
+    "localStorage": "^1.0.4",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
     "path": "^0.12.7",
