--- a/WebsiteSaeReact/isidor/package.json
+++ b/WebsiteSaeReact/isidor/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.13",
+    "expo-font": "^11.6.0",
+    "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
