--- a/WebsiteSaeReact/isidor/package.json
+++ b/WebsiteSaeReact/isidor/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -17,6 +24,7 @@
     "expo-font": "^11.6.0",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
+    "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
@@ -26,7 +34,9 @@
     "react-unity-webgl": "^9.4.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "jest": "^29.7.0"
   },
   "private": true
 }
