--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "ws" : "node ws_server.js",
     "start": "node server.js"
   },
   "author": "",
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "store": "^2.0.12",
-    "stripe": "^8.50.0"
+    "stripe": "^8.50.0",
+    "ws": "^8.16.0"
   }
 }
