--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "Server.js",
   "scripts": {
-    "ws" : "node ws_server.js",
+    "ws": "node ws_server.js",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
