--- a/WebsiteSaeReact/isidor/package.json
+++ b/WebsiteSaeReact/isidor/package.json
@@ -27,6 +27,8 @@
     "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-native": "0.72.5",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-web": "~0.19.6",
