--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.0",
     "http": "^0.0.1-security",
+    "ip": "^2.0.0",
+    "ipware": "^2.0.0",
     "localStorage": "^1.0.4",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
