--- a/WebsiteSaeReact/Backend/package.json
+++ b/WebsiteSaeReact/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "Server.js",
   "scripts": {
     "ws": "node ws_server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev" : "node --watch Server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.0",
@@ -25,6 +27,8 @@
     "nodemailer": "^6.9.6",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0",
     "store": "^2.0.12",
     "stripe": "^8.50.0",
     "ws": "^8.16.0"
