Changement sauvegarde inventaire + Chiffrement adresse IP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dotnet.preferCSharpExtension": true
+    "dotnet.preferCSharpExtension": true,
+    "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
